# epub-creator-from-web

./: .env.example  .gitignore  AGENTS.md  README.md  book_to_epub.py  pyproject.toml  txt_to_epub.py
.agents/skills/epub-reformatter/: SKILL.md
.agents/skills/epub-reformatter/agents/: openai.yaml
.agents/skills/webpage-parser/: SKILL.md
.agents/skills/webpage-parser/agents/: openai.yaml
.agents/skills/webpage-parser/references/: book-management-parser.md
booklib/: __init__.py  epub_writer.py  models.py  parallel_fetch.py  parser_registry.py
booklib/parsers/: __init__.py  jrkywsy.py  mgsf.py  pili45.py  quanben.py  towasakata.py  xfxs.py
src/: __init__.py
src/cli/: main.py  validate_epub_chapters.py
src/core/: __init__.py  epub_writer.py  output.py
src/fetch/: __init__.py  browser.py  parallel.py
src/providers/: __init__.py  registry.py
src/providers/ibusread/: parser.py  search.py
src/providers/jrkywsy/: parser.py  search.py
src/providers/mgsf/: parser.py  search.py
src/providers/pili45/: __init__.py  parser.py  search.py
src/providers/quanben/: parser.py  search.py
src/providers/towasakata/: parser.py  search.py
src/providers/xfxs/: parser.py  search.py
src/providers/zhenhun/: __init__.py  parser.py
src/runtime/: __init__.py  env.py  progress.py
src/search/: __init__.py  engines.py  orchestrator.py
