[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "book-management"
version = "0.1.0"
description = "Scrape supported web novels and build EPUB files."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.3",
    "EbookLib==0.20",
    "lxml==6.1.0",
    "opencc-python-reimplemented==0.1.7",
    "requests==2.33.1",
    "zendriver==0.15.3",
]

[project.scripts]
book-to-epub = "book_to_epub:main"
txt-to-epub = "txt_to_epub:main"

[tool.setuptools]
py-modules = ["book_to_epub", "txt_to_epub"]

[tool.setuptools.packages.find]
include = ["booklib*"]
