[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-creator-from-web"
version = "0.1.0"
description = "Scrape supported web novels and build EPUB files."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.3",
    "EbookLib==0.20",
    "lxml==6.1.0",
    "opencc-python-reimplemented==0.1.7",
    "requests==2.33.1",
    "tqdm==4.67.1",
    "zendriver==0.15.3",
]

[project.scripts]
book-to-epub = "src.cli.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
